fix first part of bug 29341, fix nsStdURL GetFile/SetFile, r=warren@netscape.com